--- a/ModelFirst/App.config
+++ b/ModelFirst/App.config
@@ -10,4 +10,7 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
+  <connectionStrings>
+    <add name="ModelFirstRecipesContainer" connectionString="metadata=res://*/ModelFirstRecipes.csdl|res://*/ModelFirstRecipes.ssdl|res://*/ModelFirstRecipes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LARRYNICKER85C4\SQLEXPRESS;initial catalog=ModelFirst;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
