ran create database from model wizard a 2nd time to create another .sql database creation script  file

--- a/ModelFirst/ModelFirst.csproj
+++ b/ModelFirst/ModelFirst.csproj
@@ -101,6 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ModelFirstRecipes.edmx.sql" />
+    <Content Include="ModelFirstRecipesV1.edmx.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
